--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ body {
     text-decoration: none;
     font-size: 20px;
     padding: 20px 16px;
+    font-weight: bold;
 }
 .menu a:hover{
  color: #1a2e35;  
