--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
 }
 .logo h1{
     font-family: 'Lobster', cursive;
-    color:#5ae4a8;
+    color:#00eceb;
     font-size: 34px;
 }
 .menu{
@@ -33,7 +33,7 @@ body {
     padding: 20px
 }
 .menu a{
-    color:#5ae4a8; 
+    color:#00eceb; 
     text-decoration: none;
     font-size: 20px;
     padding: 20px 16px;
@@ -41,11 +41,11 @@ body {
 }
 .menu a:hover{
  color: #1a2e35;  
- border-top: 4px solid #5ae4a8 ;
+ border-top: 4px solid #00eceb ;
  
 }
 #botao{
-    background-color: #5ae4a8;
+    background-color: #00eceb;
     padding: 10px 25px;
     color:white;
     border-radius: 5px;
@@ -72,7 +72,7 @@ color: white;
 }
 .headline img{
     width: 190px;
-    border: 3px solid #5ae4a8;
+    border: 3px solid #00eceb;
     border-radius: 50%;
 }
 .headline p{
@@ -84,12 +84,13 @@ color: white;
 
 .botao-contato{
  display: inline-block;
-background: #5ae4a8 ;
+background: #00eceb ;
   border-radius: 5px;
   text-decoration: none;
   color: white;
   text-transform:uppercase ;
   padding: 20px;
+  font-weight: bold;
 }
 
 .botao-contato:hover{
@@ -127,7 +128,7 @@ section h2{
     width: 30%;
     padding: 20px;
     margin: 1%;
-    border: 1px solid #5ae4a8;
+    border: 1px solid #00eceb;
     border-radius: 10px;
     cursor: pointer;
 }
@@ -139,7 +140,7 @@ section h2{
 footer{
     margin-top: 100px;
     height: 160px;
-    background-image: linear-gradient(180deg,#5ae4a8,#5ae9a9,#5ae8a9);
+    background-image: linear-gradient(180deg,#00eceb,#00eceb,#00eceb);
     text-align: center;
     border-top:3px solid #1a2e35;
 }
