--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ background: #00eceb ;
   color: white;
   text-transform:uppercase ;
   padding: 20px;
-  font-weight: bold;
+  font-weight: ;
 }
 
 .botao-contato:hover{
