--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ body {
 .header {
     display: flex;
     flex-flow: row wrap;
-    background: white;
+    background: rgb(255, 255, 255);
     justify-content: center;
     align-items: center;
     padding-top: 100px;
